# robot_master

./: README.md  requirements.txt
dual_laser_merger/: CMakeLists.txt
dual_laser_merger/src/: dual_laser_merger.cpp
factor_graph_optimization/: CMakeLists.txt
factor_graph_optimization/config/: fgo_params.yaml
factor_graph_optimization/include/factor_graph_optimization/: fgo_node.hpp  scan_matcher.hpp
factor_graph_optimization/include/factor_graph_optimization/config/: fgo_config.hpp  scan_matcher_config.hpp
factor_graph_optimization/include/factor_graph_optimization/core/: geometry_2d.hpp  noise_model.hpp  pose_conversion.hpp
factor_graph_optimization/include/factor_graph_optimization/graph/: graph_manager.hpp
factor_graph_optimization/include/factor_graph_optimization/imu/: imu_preintegrator.hpp
factor_graph_optimization/include/factor_graph_optimization/lidar/: icp_matcher.hpp  map_builder.hpp  ndt_matcher.hpp  scan_matcher_interface.hpp
factor_graph_optimization/include/factor_graph_optimization/odometry/: keyframe_selector.hpp  sensor_buffer.hpp
factor_graph_optimization/launch/: fgo.launch.py
factor_graph_optimization/src/: fgo_main.cpp  fgo_node.cpp  scan_matcher.cpp  scan_matcher_main.cpp
factor_graph_optimization/src/config/: fgo_config.cpp  scan_matcher_config.cpp
factor_graph_optimization/src/core/: geometry_2d.cpp  noise_model.cpp  pose_conversion.cpp
factor_graph_optimization/src/graph/: graph_manager.cpp
factor_graph_optimization/src/imu/: imu_preintegrator.cpp
factor_graph_optimization/src/lidar/: icp_matcher.cpp  map_builder.cpp  ndt_matcher.cpp
factor_graph_optimization/src/odometry/: keyframe_selector.cpp
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: robot_bringup.launch.py  robot_cartographer.launch.py  robot_navigation.launch.py  robot_navigation_amcl_ekf.launch.py  robot_occupancy_grid.launch.py  robot_slam.launch.py
robot_bringup/robot_startup_param/: robot_params.yaml
robot_custom_behaviour_executor/: CMakeLists.txt  README.md  package.xml
robot_custom_behaviour_executor/behavior_trees/: my_idle_monitor_bt.xml
robot_custom_behaviour_executor/include/robot_custom_behaviour_executor/: monitor_bt_node.hpp
robot_custom_behaviour_executor/launch/: monitor_bt_launch.py
robot_custom_behaviour_executor/src/: monitor_bt_node.cpp
robot_custom_behaviour_tree_nodes/: CMakeLists.txt  battery_check_plugin.xml  emergency_stop_plugin.xml  get_charge_station_pose_plugin.xml  navigate_to_charge_station_plugin.xml  package.xml
robot_custom_behaviour_tree_nodes/include/robot_custom_behaviour_tree_nodes/: battery_check_action.hpp  emergency_stop_action.hpp  get_charge_station_pose_action.hpp  navigate_to_charge_station_action.hpp
robot_custom_behaviour_tree_nodes/src/: battery_check_action.cpp  emergency_stop_action.cpp  get_charge_station_pose_action.cpp  navigate_to_charge_station_action.cpp
robot_custom_layers/: CMakeLists.txt  package.xml  prohibited_layer_plugin.xml
robot_custom_layers/include/robot_custom_layers/: prohibited_layer.hpp
robot_custom_layers/src/: prohibited_layer.cpp
robot_custom_local_planner/: CMakeLists.txt  ackermann_local_planner_plugin.xml  custom_local_planner_plugin.xml  package.xml
robot_custom_local_planner/config/: ackermann_local_planner.yaml
robot_custom_local_planner/include/robot_custom_local_planner/: ackermann_local_planner.hpp  custom_local_planner.hpp
robot_custom_local_planner/launch/: test_custom_planner.launch.py
robot_custom_local_planner/src/: ackermann_local_planner.cpp  custom_local_planner.cpp
robot_database/: CMakeLists.txt  package.xml
robot_database/launch/: robot_database.launch.py
robot_database/scripts/: enable_preimage.sh
robot_database/src/: robot_database_node.cpp  robot_database_stream_node.cpp
robot_description/: CMakeLists.txt  package.xml
robot_fgo_localization/: CMakeLists.txt  package.xml
robot_fgo_localization/factor_graph_optimization/: CMakeLists.txt  README.md  package.xml
robot_fgo_localization/factor_graph_optimization/config/: fgo_params.yaml
robot_fgo_localization/factor_graph_optimization/include/factor_graph_optimization/: fgo_node.hpp
robot_fgo_localization/factor_graph_optimization/src/: fgo_node.cpp  scan_matcher.cpp
robot_fgo_localization/factor_graph_optimization/src/config/: fgo_config.cpp  scan_matcher_config.cpp
robot_fgo_localization/factor_graph_optimization/src/core/: geometry_2d.cpp  noise_model.cpp
robot_fgo_localization/include/robot_fgo_localization/: fgo_localization_node.hpp  scan_matcher.hpp
robot_fgo_localization/launch/: robot_fgo.launch.py
robot_fgo_localization/params/: fgo_params.yaml
robot_fgo_localization/src/: fgo_localization_node.cpp  scan_matcher.cpp
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: localization_benchmark.launch.py  localization_benchmark_amcl.launch.py  robot_warehouse.launch.py
robot_gazebo/models/robot/: model.config  model.sdf
robot_gazebo/scripts/: amcl_pose_to_odom.py  ground_truth_publisher.py  localization_benchmark.py
robot_gazebo/src/: ground_truth_publisher.cpp
robot_gazebo/worlds/: robot_empty.sdf  robot_warehouse.sdf
robot_graph_based_global_planner/: CMakeLists.txt  graph_based_planner_plugin.xml  package.xml
robot_graph_based_global_planner/include/robot_graph_based_global_planner/: graph_based_planner.hpp
robot_graph_based_global_planner/src/: graph_based_planner.cpp
robot_navigation/: CMakeLists.txt  package.xml  setup.py
robot_navigation/behavior_trees/: navigate_w_replanning_simple.xml
robot_navigation/config/: amcl_config.yaml  cartographer_2d.lua  robot_move_base.yaml  slam_toolbox_params.yaml
robot_navigation/graphs/: robot_map_graph.json
robot_navigation/launch/: custom_navigation_launch.py  robot_amcl_navigation2.launch.py
robot_navigation/robot_navigation/: visualize_graph_rviz.py
robot_navigation/rviz/: robot_cartographer_config.rviz  robot_rviz_config.rviz  robot_slam_config.rviz
robot_navigation/scripts/: battery_publisher.py  publish_initial_pose.py  save_amcl_pose.py
(+43 files in other folders)
