<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_custom_behaviour_tree_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="qaz9517532846@gmail.com">tech</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_behavior_tree plugin="${prefix}/battery_check_plugin.xml" />
    <nav2_behavior_tree plugin="${prefix}/get_charge_station_pose_plugin.xml" />
    <nav2_behavior_tree plugin="${prefix}/emergency_stop_plugin.xml" />
    <nav2_behavior_tree plugin="${prefix}/navigate_to_charge_station_plugin.xml" />
  </export>
</package>
