<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_fgo_localization</name>
  <version>0.1.0</version>
  <description>Custom Factor Graph Optimization (FGO) localization node using GTSAM iSAM2.
    Replaces robot_localization (EKF) + nav2_amcl with a single, tightly-coupled
    localization node that fuses odometry, IMU and lidar scan matching.</description>
  <maintainer email="yagiz@robot.com">Yagiz Tansu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Map loading -->
  <depend>nav2_map_server</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>

  <!-- Lifecycle -->
  <depend>nav2_lifecycle_manager</depend>

  <!-- GTSAM -->
  <depend>gtsam</depend>

  <!-- PCL for scan matching -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Eigen -->
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
